cpp/common/test/deviations/invalid_deviations/InvalidDeviationPermits.qlref
codingstandards/cpp/deviations/InvalidDeviationPermits.ql